--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello,world!</h1>
+    <header class="hero">
+        <div class="container">
+            <nav class="hero-navbar">
+                <div class="logo">logo</div>
+                <!-- /.logo -->
+                <div class="links">
+                    <a href="#" class="link">Главная</a>
+                    <a href="#" class="link">А*</a>
+                    <a href="#" class="link">Алгоритм кластеризации</a>
+                    <a href="#" class="link">Генетический алгоритм</a>
+                    <a href="#" class="link">Муравьиный алгоритм</a>
+                    <a href="#" class="link">Дерево решений</a>
+                    <a href="#" class="link">Нейроная сеть</a>
+                </div>
+                <!-- /.links -->
+            </nav>
+            <!-- /.hero-navbar -->
+        </div>
+        <!-- /.container -->
+    </header>
+    <!-- /.hero -->
 </body>
 </html>
