add setting and field

--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -28,5 +28,34 @@
         <!-- /.container -->
     </header>
     <!-- /.hero -->
+    <div class="name-page">
+        <div class="container">
+            <strong class="title">Algorithm A*</strong>
+        </div>
+        <!-- /.container -->
+    </div>
+    <!-- /.name-page -->
+    <section class="interface">
+        <div class="container">
+            <div class="interface-block">
+                <div class="settings">
+                    <div class="input">
+                        <label for="input" class="setting-label">Размер лабиринта:</label>
+                        <input type="number" class="settings-input">
+                    </div>
+                    <!-- /.input -->
+                    <div class="buttons">
+                        <button class="buttons-generate">Запустить</button>
+                        <button class="buttons-reset">Сбросить</button>
+                    </div>
+                </div>
+                <!-- /.settings -->
+                <div class="field"></div>
+                <!-- /.field -->
+            </div>
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.interface -->
 </body>
 </html>
