--- a/index.html
+++ b/index.html
@@ -28,5 +28,12 @@
         <!-- /.container -->
     </header>
     <!-- /.hero -->
+    <div class="name-page">
+        <div class="container">
+            <strong class="title">General page</strong>
+        </div>
+        <!-- /.container -->
+    </div>
+    <!-- /.name-page -->
 </body>
 </html>
