creat interface field

--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -41,7 +41,7 @@
                 <div class="settings">
                     <div class="input">
                         <label for="input" class="setting-label">Размер лабиринта:</label>
-                        <input type="number" class="settings-input">
+                        <input type="number" class="settings-input" placeholder="Введите число">
                     </div>
                     <!-- /.input -->
                     <div class="buttons">
