creat interface Astar

--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -40,7 +40,7 @@
             <div class="interface-block">
                 <div class="settings">
                     <div class="input">
-                        <label for="input" class="setting-label">Размер лабиринта:</label>
+                        <label for="input" class="settings-label">Размер лабиринта:</label>
                         <input type="number" class="settings-input" placeholder="Введите число">
                     </div>
                     <!-- /.input -->
