--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -45,8 +45,8 @@
                     </div>
                     <!-- /.input -->
                     <div class="buttons">
-                        <button class="buttons-generate">Запустить</button>
-                        <button class="buttons-reset">Сбросить</button>
+                        <button class="button buttons-generate">Запустить</button>
+                        <button class="button buttons-reset">Сбросить</button>
                     </div>
                 </div>
                 <!-- /.settings -->
