--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -41,11 +41,11 @@
                 <div class="settings">
                     <div class="input">
                         <label for="input" class="settings-label">Размер лабиринта:</label>
-                        <input type="number" class="settings-input" placeholder="Введите число">
+                        <input type="number" class="settings-input" placeholder="Введите число" id="sizeMatrix">
                     </div>
                     <!-- /.input -->
                     <div class="buttons">
-                        <button class="button buttons-generate">Запустить</button>
+                        <button class="button buttons-generate" onclick="getVariable()">Запустить</button>
                         <button class="button buttons-reset">Сбросить</button>
                     </div>
                 </div>
@@ -57,5 +57,6 @@
         <!-- /.container -->
     </section>
     <!-- /.interface -->
+    <script src="/src/Astar/creatMaze.js"></script>
 </body>
 </html>
