--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -45,12 +45,12 @@
                     </div>
                     <!-- /.input -->
                     <div class="buttons">
-                        <button class="button buttons-generate" onclick="getVariable()">Запустить</button>
+                        <button class="button buttons-generate">Запустить</button>
                         <button class="button buttons-reset">Сбросить</button>
                     </div>
                 </div>
                 <!-- /.settings -->
-                <div class="field"></div>
+                <div class="field" id="matrixContaienr"></div>
                 <!-- /.field -->
             </div>
         </div>
