--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <!-- /.settings -->
-                <div class="field" id="matrixContaienr"></div>
+                <div class="field"></div>
                 <!-- /.field -->
             </div>
         </div>
