The button is now working

--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -41,11 +41,11 @@
                 <div class="settings">
                     <div class="input">
                         <label for="input" class="settings-label">Размер лабиринта:</label>
-                        <input type="number" class="settings-input" placeholder="Введите число" id="sizeMatrix">
+                        <input type="number" class="settings-input" placeholder="Введите число" id="inputSize">
                     </div>
                     <!-- /.input -->
                     <div class="buttons">
-                        <button class="button buttons-generate">Сгенерировать</button>
+                        <button class="button buttons-generate" id="generateButton">Сгенерировать</button>
                         <button class="button buttons-reset">Запустить</button>
                     </div>
                 </div>
