--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -48,6 +48,11 @@
                         <button class="button buttons-generate" id="generateButton">Сгенерировать</button>
                         <button class="button buttons-reset">Запустить</button>
                     </div>
+                    <div class="work-text">
+                        <div class="text-succsess">Путь найден</div>
+                        <div class="text-faild">Нет путей</div>
+                    </div>
+                    <!-- /.work-text -->
                 </div>
                 <!-- /.settings -->
                 <div class="field"></div>
