--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -44,14 +44,19 @@
                         <input type="number" class="settings-input" placeholder="Введите число" id="inputSize">
                     </div>
                     <!-- /.input -->
-                    <div class="buttons">
+                    <div class="first-buttons">
                         <button class="button buttons-generate" id="generateButton">Сгенерировать</button>
-                        <button class="button buttons-reset">Запустить</button>
+                        <button class="button buttons-reset">Запустить алгоритм</button>
                     </div>
-                    <div class="work-text">
+                    <div class="second-buttons">
+                        <button class="button">Добавить начало</button>
+                        <button class="button">Добавить конец</button>
+                    </div>
+                    <!-- /.second-buttons -->
+                    <!-- <div class="work-text">
                         <div class="text-succsess">Путь найден</div>
                         <div class="text-faild">Нет путей</div>
-                    </div>
+                    </div> -->
                     <!-- /.work-text -->
                 </div>
                 <!-- /.settings -->
