add start and end points

--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -46,11 +46,11 @@
                     <!-- /.input -->
                     <div class="first-buttons">
                         <button class="button buttons-generate" id="generateButton">Сгенерировать</button>
-                        <button class="button buttons-reset">Запустить алгоритм</button>
+                        <button class="button buttons-reset" id="startButton">Запустить алгоритм</button>
                     </div>
                     <div class="second-buttons">
-                        <button class="button">Добавить начало</button>
-                        <button class="button">Добавить конец</button>
+                        <button class="button" id="addStart">Добавить начало</button>
+                        <button class="button" id="addEnd">Добавить конец</button>
                     </div>
                     <!-- /.second-buttons -->
                     <!-- <div class="work-text">
