--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -53,10 +53,10 @@
                         <button class="button" id="addEnd">Добавить конец</button>
                     </div>
                     <!-- /.second-buttons -->
-                    <!-- <div class="work-text">
-                        <div class="text-succsess">Путь найден</div>
-                        <div class="text-faild">Нет путей</div>
-                    </div> -->
+                    <div class="work-text">
+                        <div class="text-succsess" style="display: none;">Путь найден</div>
+                        <div class="text-faild" style="display: none;">Нет путей</div>
+                    </div>
                     <!-- /.work-text -->
                 </div>
                 <!-- /.settings -->
