add page genetic algorithm

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="#" class="link">Главная</a>
                     <a href="/src/Astar/Astar.html" class="link">А*</a>
                     <a href="#" class="link">Алгоритм кластеризации</a>
-                    <a href="#" class="link">Генетический алгоритм</a>
+                    <a href="/src/Genetic/genetic.html" class="link">Генетический алгоритм</a>
                     <a href="#" class="link">Муравьиный алгоритм</a>
                     <a href="#" class="link">Дерево решений</a>
                     <a href="#" class="link">Нейроная сеть</a>
@@ -35,5 +35,6 @@
         <!-- /.container -->
     </div>
     <!-- /.name-page -->
+    
 </body>
 </html>
