--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -16,7 +16,7 @@
                     <a href="/index.html" class="link">Главная</a>
                     <a href="#" class="link">А*</a>
                     <a href="#" class="link">Алгоритм кластеризации</a>
-                    <a href="#" class="link">Генетический алгоритм</a>
+                    <a href="/src/Genetic/genetic.html" class="link">Генетический алгоритм</a>
                     <a href="#" class="link">Муравьиный алгоритм</a>
                     <a href="#" class="link">Дерево решений</a>
                     <a href="#" class="link">Нейроная сеть</a>
@@ -67,6 +67,6 @@
         <!-- /.container -->
     </section>
     <!-- /.interface -->
-    <script src="/src/Astar/creatMaze.js"></script>
+    <script src="/src/Astar/appStar/creatMaze.js"></script>
 </body>
 </html>
