--- a/src/Genetic/genetic.html
+++ b/src/Genetic/genetic.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/src/css/style.css">
     <title>Genetic</title>
 </head>
 <body>
-    
+    <header class="hero">
+        <div class="container">
+            <nav class="hero-navbar">
+                <div class="logo">logo</div>
+                <!-- /.logo -->
+                <div class="links">
+                    <a href="/index.html" class="link">Главная</a>
+                    <a href="/src/Astar/Astar.html" class="link">А*</a>
+                    <a href="#" class="link">Алгоритм кластеризации</a>
+                    <a href="#" class="link">Генетический алгоритм</a>
+                    <a href="#" class="link">Муравьиный алгоритм</a>
+                    <a href="#" class="link">Дерево решений</a>
+                    <a href="#" class="link">Нейроная сеть</a>
+                </div>
+                <!-- /.links -->
+            </nav>
+            <!-- /.hero-navbar -->
+        </div>
+        <!-- /.container -->
+    </header>
+    <!-- /.hero -->
+    <div class="name-page">
+        <div class="container">
+            <strong class="title">Genetic algorithm</strong>
+        </div>
+        <!-- /.container -->
+    </div>
+    <section class="interface">
+        <div class="container">
+            <div class="interface-block">
+                <div class="configure">
+
+                </div>
+                <!-- /.configure -->
+                <canvas id="genetic-field" class="field"></canvas>
+                <!-- /.field -->
+            </div>
+            <!-- /.interface-block -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.interface -->
+    <script src="/src/Genetic/appGenetic/app.js"></script>
 </body>
 </html>
