--- a/src/Genetic/genetic.html
+++ b/src/Genetic/genetic.html
@@ -38,10 +38,14 @@
         <div class="container">
             <div class="interface-block">
                 <div class="configure">
-
+                    <button class="button" id="addPoints">Добавить точки</button>
+                    <button class="button" id="delete">Очистить</button>
+                    <button class="button">Запустить алгоритм</button>
                 </div>
                 <!-- /.configure -->
-                <canvas id="genetic-field" class="field"></canvas>
+                <div class="field">
+                    <canvas id="genetic-field" width="550" height="550" ></canvas>
+                </div>
                 <!-- /.field -->
             </div>
             <!-- /.interface-block -->
