--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -15,7 +15,7 @@
                 <div class="links">
                     <a href="/index.html" class="link">Главная</a>
                     <a href="#" class="link">А*</a>
-                    <a href="#" class="link">Алгоритм кластеризации</a>
+                    <a href="/src/Cluster/cluster.html" class="link">Алгоритм кластеризации</a>
                     <a href="/src/Genetic/genetic.html" class="link">Генетический алгоритм</a>
                     <a href="#" class="link">Муравьиный алгоритм</a>
                     <a href="#" class="link">Дерево решений</a>
