add burger-menu for main page

--- a/index.html
+++ b/index.html
@@ -10,17 +10,36 @@
     <header class="hero">
         <div class="container">
             <nav class="hero-navbar">
+                <button class="menu" id="burger">
+                    <span class="menu-line"></span>
+                    <span class="menu-line"></span>
+                    <span class="menu-line"></span>
+                </button>
                 <div class="logo">logo</div>
                 <!-- /.logo -->
-                <div class="links">
-                    <a href="#" class="link">Главная</a>
-                    <a href="/src/Astar/Astar.html" class="link">А*</a>
-                    <a href="/src/Cluster/cluster.html" class="link">Алгоритм кластеризации</a>
-                    <a href="/src/Genetic/genetic.html" class="link">Генетический алгоритм</a>
-                    <a href="#" class="link">Муравьиный алгоритм</a>
-                    <a href="#" class="link">Дерево решений</a>
-                    <a href="#" class="link">Нейроная сеть</a>
-                </div>
+                <ul class="links">
+                    <li class="list">
+                        <a href="#" class="list-link">Главная</a>
+                    </li>
+                    <li class="list">
+                        <a href="/src/Astar/Astar.html" class="list-link">А*</a>
+                    </li>
+                    <li class="list">
+                        <a href="/src/Cluster/cluster.html" class="list-link">Алгоритм кластеризации</a>
+                    </li>
+                    <li class="list">
+                        <a href="/src/Genetic/genetic.html" class="list-link">Генетический алгоритм</a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="list-link">Муравьиный алгоритм</a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="list-link">Дерево решений</a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="list-link">Нейроная сеть</a>
+                    </li>
+                </ul>
                 <!-- /.links -->
             </nav>
             <!-- /.hero-navbar -->
@@ -35,5 +54,6 @@
         <!-- /.container -->
     </div>
     <!-- /.name-page -->
+    <script src="/burger.js"></script>
 </body>
 </html>
