--- a/src/Cluster/cluster.html
+++ b/src/Cluster/cluster.html
@@ -12,15 +12,29 @@
             <nav class="hero-navbar">
                 <div class="logo">logo</div>
                 <!-- /.logo -->
-                <div class="links">
-                    <a href="/index.html" class="link">Главная</a>
-                    <a href="/src/Astar/Astar.html" class="link">А*</a>
-                    <a href="#" class="link">Алгоритм кластеризации</a>
-                    <a href="/src/Genetic/genetic.html" class="link">Генетический алгоритм</a>
-                    <a href="#" class="link">Муравьиный алгоритм</a>
-                    <a href="#" class="link">Дерево решений</a>
-                    <a href="#" class="link">Нейроная сеть</a>
-                </div>
+                <ul class="links">
+                    <li class="list">
+                        <a href="/index.html" class="list-link">Главная</a>
+                    </li>
+                    <li class="list">
+                        <a href="/src/Astar/Astar.html" class="list-link">А*</a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="list-link">Алгоритм кластеризации</a>
+                    </li>
+                    <li class="list">
+                        <a href="/src/Genetic/genetic.html" class="list-link">Генетический алгоритм</a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="list-link">Муравьиный алгоритм</a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="list-link">Дерево решений</a>
+                    </li>
+                    <li class="list">
+                        <a href="#" class="list-link">Нейроная сеть</a>
+                    </li>
+                </ul>
                 <!-- /.links -->
             </nav>
             <!-- /.hero-navbar -->
