--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -81,6 +81,7 @@
         <!-- /.container -->
     </section>
     <!-- /.interface -->
-    <script src="/src/Astar/appStar/creatMaze.js"></script>
+    <script src="/src/Astar/appStar/creatMaze.js" type="module"></script>
+    <!-- <script src="/src/Astar/appStar/App.js" type="module"></script> -->
 </body>
 </html>
