--- a/src/Genetic/genetic.html
+++ b/src/Genetic/genetic.html
@@ -67,6 +67,6 @@
         <!-- /.container -->
     </section>
     <!-- /.interface -->
-    <script src="/src/Genetic/appGenetic/appGenetic.js"></script>
+    <script src="/src/Genetic/appGenetic/appGenetic.js" type="module"></script>
 </body>
 </html>
