--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
     <!-- /.hero -->
     <div class="name-page">
         <div class="container">
-            <strong class="title">General page</strong>
+            <div class="title">
+                <strong class="title-text">General page</strong>
+            </div>
+            <!-- /.title -->
+            <div class="text">
+                <p>Приветсвуем на нашем сайте, здесь представлены алгоримты...</p>
+            </div>
+            <!-- /.text -->
         </div>
         <!-- /.container -->
     </div>
