--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -44,7 +44,10 @@
     <!-- /.hero -->
     <div class="name-page">
         <div class="container">
-            <strong class="title">Algorithm A*</strong>
+            <div class="title">
+                <strong class="title-text">Algorithm A*</strong>
+            </div>
+            <!-- /.title -->
         </div>
         <!-- /.container -->
     </div>
@@ -60,7 +63,7 @@
                     <!-- /.input -->
                     <div class="first-buttons">
                         <button class="button buttons-generate" id="generateButton">Сгенерировать</button>
-                        <button class="button buttons-reset" id="startButton">Запустить алгоритм</button>
+                        <button class="button buttons-reset" id="startButton">Запуск</button>
                     </div>
                     <div class="second-buttons">
                         <button class="button" id="addStart">Добавить начало</button>
