--- a/src/Cluster/cluster.html
+++ b/src/Cluster/cluster.html
@@ -44,7 +44,10 @@
     <!-- /.hero -->
     <div class="name-page">
         <div class="container">
-            <strong class="title">Алгоритм кластеризации(dbscan, k-средних, иерархическая кластеризация)</strong>
+            <div class="title">
+                <strong class="title-text">Алгоритм кластеризации(dbscan, k-средних, иерархическая кластеризация)</strong>
+            </div>
+            <!-- /.title -->
                 <div>
                     <canvas></canvas>
                     <script src="/src/Cluster/testCanvasPoints.js"></script>
