--- a/src/Genetic/genetic.html
+++ b/src/Genetic/genetic.html
@@ -44,7 +44,10 @@
     <!-- /.hero -->
     <div class="name-page">
         <div class="container">
-            <strong class="title">Genetic algorithm</strong>
+            <div class="title">
+                <strong class="title-text">Genetic Algorithm</strong>
+            </div>
+            <!-- /.title -->
         </div>
         <!-- /.container -->
     </div>
