--- a/src/Genetic/genetic.html
+++ b/src/Genetic/genetic.html
@@ -10,6 +10,11 @@
     <header class="hero">
         <div class="container">
             <nav class="hero-navbar">
+                <button class="menu" id="burger">
+                    <span class="menu-line"></span>
+                    <span class="menu-line"></span>
+                    <span class="menu-line"></span>
+                </button>
                 <div class="logo">logo</div>
                 <!-- /.logo -->
                 <ul class="links">
@@ -26,7 +31,7 @@
                         <a href="#" class="list-link">Генетический алгоритм</a>
                     </li>
                     <li class="list">
-                        <a href="#" class="list-link">Муравьиный алгоритм</a>
+                        <a href="/src/ant/ant.html" class="list-link">Муравьиный алгоритм</a>
                     </li>
                     <li class="list">
                         <a href="#" class="list-link">Дерево решений</a>
@@ -71,5 +76,6 @@
     </section>
     <!-- /.interface -->
     <script src="/src/Genetic/appGenetic/appGenetic.js" type="module"></script>
+    <script src="/burger.js"></script>
 </body>
 </html>
