added an adaptive for Genetic

--- a/src/Genetic/genetic.html
+++ b/src/Genetic/genetic.html
@@ -60,13 +60,13 @@
         <div class="container">
             <div class="interface-block">
                 <div class="configure">
-                    <button class="button" id="delete">Очистить</button>
-                    <button class="button" id="startGenetic">Запустить алгоритм</button>
-                    <button class="button" id="deleteLastButton">Удалить последюю точку</button>
+                    <button class="button button-style" id="delete">Очистить</button>
+                    <button class="button button-style" id="startGenetic">Запуск</button>
+                    <button class="button button-style" id="deleteLastButton">Удалить точку</button>
                 </div>
                 <!-- /.configure -->
                 <div class="field">
-                    <canvas id="genetic-field" width="550" height="550" ></canvas>
+                    <canvas id="genetic-field" width="550" height="550"></canvas>
                 </div>
                 <!-- /.field -->
             </div>
