--- a/src/ant/ant.html
+++ b/src/ant/ant.html
@@ -61,8 +61,6 @@
 <div>
     <div>
         <canvas></canvas> 
-        <script  src = "/Users/vaceslav/Desktop/ant/Antcanvas.js"></script>
-        <script src = "/Users/vaceslav/Desktop/ant/Antanlg.js"></script>
         
         <div class="buttons">
             <button class="button" onclick="emitDataFile();">Проложить путь</button>
@@ -72,4 +70,6 @@
     </div>
 </div>
     <script src="/burger.js"></script>
+    <script src="/src/ant/Antanlg.js"></script>
+    <script src="/src/ant/Antcanvas.js"></script>
 </html>
