--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
                 <!-- /.logo -->
                 <ul class="links">
                     <li class="list">
-                        <a href="#" class="list-link">Главная</a>
+                        <a href="#" class="list-link general">Главная</a>
                     </li>
                     <li class="list">
-                        <a href="/src/Astar/Astar.html" class="list-link">А*</a>
+                        <a href="/src/Astar/Astar.html" class="list-link" id="stars">А*</a>
                     </li>
                     <li class="list">
-                        <a href="/src/Cluster/cluster.html" class="list-link">Алгоритм кластеризации</a>
+                        <a href="/src/Cluster/cluster.html" class="list-link" id="clust">Алгоритм кластеризации</a>
                     </li>
                     <li class="list">
-                        <a href="/src/Genetic/genetic.html" class="list-link">Генетический алгоритм</a>
+                        <a href="/src/Genetic/genetic.html" class="list-link" id="gen">Генетический алгоритм</a>
                     </li>
                     <li class="list">
-                        <a href="/src/ant/ant.html" class="list-link">Муравьиный алгоритм</a>
+                        <a href="/src/ant/ant.html" class="list-link" id="antt">Муравьиный алгоритм</a>
                     </li>
                     <li class="list">
-                        <a href="#" class="list-link">Дерево решений</a>
+                        <a href="#" class="list-link" id="tr">Дерево решений</a>
                     </li>
                     <li class="list">
-                        <a href="#" class="list-link">Нейроная сеть</a>
+                        <a href="#" class="list-link" id="neu">Нейроная сеть</a>
                     </li>
                 </ul>
                 <!-- /.links -->
@@ -62,5 +62,6 @@
     </div>
     <!-- /.name-page -->
     <script src="/burger.js"></script>
+    <script src="/main.js"></script>
 </body>
 </html>
