--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -22,7 +22,7 @@
                         <a href="/index.html" class="list-link">Главная</a>
                     </li>
                     <li class="list">
-                        <a href="#" class="list-link">А*</a>
+                        <a href="#" class="list-link" id="stars">А*</a>
                     </li>
                     <li class="list">
                         <a href="/src/Cluster/cluster.html" class="list-link">Алгоритм кластеризации</a>
@@ -94,6 +94,7 @@
     <!-- /.interface -->
     <script src="/src/Astar/appStar/creatMaze.js" type="module"></script>
     <script src="/burger.js"></script>
-    <!-- <script src="/src/Astar/appStar/App.js" type="module"></script> -->
+    <script src="/main.js"></script>
+    <script src="/src/Astar/appStar/App.js" type="module"></script>
 </body>
 </html>
