--- a/src/Genetic/genetic.html
+++ b/src/Genetic/genetic.html
@@ -19,25 +19,25 @@
                 <!-- /.logo -->
                 <ul class="links">
                     <li class="list">
-                        <a href="/index.html" class="list-link">Главная</a>
+                        <a href="/index.html" class="list-link list-link-general">Главная</a>
                     </li>
                     <li class="list">
-                        <a href="/src/Astar/Astar.html" class="list-link">А*</a>
+                        <a href="/src/Astar/Astar.html" class="list-link list-link--star">А*</a>
                     </li>
                     <li class="list">
-                        <a href="/src/Cluster/cluster.html" class="list-link">Алгоритм кластеризации</a>
+                        <a href="/src/Cluster/cluster.html" class="list-link list-link-klast">Алгоритм кластеризации</a>
                     </li>
                     <li class="list">
-                        <a href="#" class="list-link">Генетический алгоритм</a>
+                        <a href="#" class="list-link list-link-genetic">Генетический алгоритм</a>
                     </li>
                     <li class="list">
-                        <a href="/src/ant/ant.html" class="list-link">Муравьиный алгоритм</a>
+                        <a href="/src/ant/ant.html" class="list-link list-link-ant">Муравьиный алгоритм</a>
                     </li>
                     <li class="list">
-                        <a href="#" class="list-link">Дерево решений</a>
+                        <a href="#" class="list-link list-link-tree">Дерево решений</a>
                     </li>
                     <li class="list">
-                        <a href="#" class="list-link">Нейроная сеть</a>
+                        <a href="#" class="list-link list-link-neural">Нейроная сеть</a>
                     </li>
                 </ul>
                 <!-- /.links -->
