--- a/src/Astar/Astar.html
+++ b/src/Astar/Astar.html
@@ -96,5 +96,6 @@
     <script src="/burger.js"></script>
     <script src="/main.js"></script>
     <script src="/src/Astar/appStar/App.js" type="module"></script>
+    <!-- <script src="/test.js"></script> -->
 </body>
 </html>
